completed admn panel structure

--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Banner/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Banner/Index.cshtml
@@ -14,7 +14,9 @@
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
-                
+                    <th>
+                        №
+                    </th>
                     <th>
                         Image
                     </th>
@@ -35,9 +37,11 @@
             <tbody>
                
                 <tr>
-
                     <td>
-                        <img width="100" src="~/img/banner/@Model.Image"/>   
+                        @counter
+                    </td>
+                    <td>
+                        <img width="100" src="~/img/banner/@Model.Image" />
                     </td>
 
                     <td>
