--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -96,7 +96,46 @@
                     <span>Position</span>
                 </a>
             </li>
-
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Setting" asp-action="index">
+                    <span>Setting</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Skill" asp-action="index">
+                    <span>Skill</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Slider" asp-action="index">
+                    <span>Slider</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Speaker" asp-action="index">
+                    <span>Speaker</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Subscribe" asp-action="index">
+                    <span>Subscribe</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Tag" asp-action="index">
+                    <span>Tag</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Teacher" asp-action="index">
+                    <span>Teacher</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" asp-area="Manage" asp-controller="Testimonial" asp-action="index">
+                    <span>Testimonial</span>
+                </a>
+            </li>
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
