--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Create.cshtml
@@ -1,7 +1,58 @@
-﻿
+﻿@model Blog
 @{
     ViewData["Title"] = "Create";
+    IEnumerable<Category> categories = ViewBag.Categories;
+    IEnumerable<Tag> tags = ViewBag.Tags;
+    SelectList selectCategoryListItems = new SelectList(categories, nameof(Category.Id), nameof(Category.Name));
+    SelectList selectTagListItems = new SelectList(tags, nameof(Tag.Id), nameof(Tag.Name));
+
+
 }
 
-<h1>Create</h1>
-
+<h1 class="h3 mb-4 text-gray-800">Create Brand</h1>
+<div class="row justify-content-center">
+    <div class="col-lg-8">
+        <form method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label asp-for="Title">Title</label>
+                <input asp-for="Title" class="form-control" placeholder="Title">
+                <span asp-validation-for="Title" class="text text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Author">Author</label>
+                <input asp-for="Author" class="form-control" placeholder="Author">
+                <span asp-validation-for="Author" class="text text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Date">Description</label>
+                <input type="date" asp-for="Date" class="form-control" placeholder="Date">
+                <span asp-validation-for="Date" class="text text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description">Description</label>
+                <input asp-for="Description" class="form-control" placeholder="Description">
+                <span asp-validation-for="Description" class="text text-danger"></span>
+            </div>
+        
+            <div class="form-group">
+                <label asp-for="File">Image File</label>
+                <input asp-for="File" class="form-control" placeholder="Image File">
+                <span asp-validation-for="File" class="text text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Catgeory</label>
+                <select asp-for="CategoryId" class="form-control" asp-items="selectCategoryListItems">
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Tag</label>
+                <select asp-for="TagIds" multiple class="form-control" asp-items="selectTagListItems">
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+    </div>
+</div>
+@section script{
+    @await Html.PartialAsync("_ValidationPartial");
+}
