--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Index.cshtml
@@ -1,7 +1,73 @@
-﻿
+﻿@model IEnumerable<Blog>
 @{
     ViewData["Title"] = "Index";
+    int counter = 1;
 }
+<div class="row justify-content-between">
+    <div class="col-lg-2">
+        <h1 class="h3 mb-4 text-gray-800">Blog Page</h1>
+    </div>
+</div>
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-lg-12">
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        №
+                    </th>
+                    <th>
+                        Image
+                    </th>
+                    <th>
+                        Title
+                    </th>
+                    <th>
+                        Created at
+                    </th>
+                    <th>
+                        Updated at
+                    </th>
+                    <th>
+                        Setting
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Blog blog in Model)
+                {
 
+                <tr>
+                    <td>
+                        @counter
+                    </td>
+                    <td>
+                        <img width="100" src="~/img/blog/@blog.Image" />
+                    </td>
+
+                    <td>
+                        @blog.Title
+                    </td>
+                    <td>
+                        @blog.CreatedAt?.ToString("dd/mm/yyyy")
+                    </td>
+                    <td>
+                        @blog.UpdatedAt?.ToString("dd/mm/yyyy")
+                    </td>
+                    <td>
+                        <a class="btn btn-warning" asp-area="manage" asp-controller="blog" asp-action="update" asp-route-id="@blog.Id">Update</a>
+                        <a class="btn btn-warning" asp-area="manage" asp-controller="blog" asp-action="delete" asp-route-id="@blog.Id">Delete</a>
+                        <a class="btn btn-warning" asp-area="manage" asp-controller="blog" asp-action="detail" asp-route-id="@blog.Id">Detail</a>
+
+                    </td>
+                </tr>
+                    counter++;
+                }
+
+
+            </tbody>
+        </table>
+
+    </div>
+</div>
