--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Create.cshtml
@@ -9,7 +9,7 @@
 
 }
 
-<h1 class="h3 mb-4 text-gray-800">Create Brand</h1>
+<h1 class="h3 mb-4 text-gray-800">Create Event</h1>
 <div class="row justify-content-center">
     <div class="col-lg-8">
         <form method="post" enctype="multipart/form-data">
