--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Position/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Position/Update.cshtml
@@ -1,7 +1,22 @@
-﻿
+﻿@model Position
 @{
     ViewData["Title"] = "Update";
 }
 
-<h1>Update</h1>
+<h1 class="h3 mb-4 text-gray-800">Update Position</h1>
+<div class="row justify-content-center">
+    <div class="col-lg-8">
+        <form method="post">
+            <div class="form-group"> 
+                <label asp-for="Name">Name</label>
+                <input asp-for="Name" class="form-control" placeholder="Enter Name">
+                <span asp-validation-for="Name" class="text text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+    </div>
+</div>
 
+@section script{
+    @await Html.PartialAsync("_ValidationPartial");
+}
