--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Teacher/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Teacher/Create.cshtml
@@ -87,12 +87,12 @@
                 <input asp-for="File" class="form-control" placeholder="Image File">
                 <span asp-validation-for="File" class="text text-danger"></span>
             </div>
-            <div class="form-group">
+            <div id="parentList" class="form-group">
                 <label>Position</label>
                 <select asp-for="PositionId" class="form-control" asp-items="selectPositionListItems">
                 </select>
             </div>
-            <div class="form-group">
+            <div id="parentList" class="form-group">
                 <label>Skill</label>
                 <select asp-for="SkillIds" class="form-control" asp-items="selectSkillListItems">
                 </select>
