--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Testimonial/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Testimonial/Update.cshtml
@@ -25,7 +25,7 @@
                 <input asp-for="File" class="form-control" placeholder="Up">
                 <span asp-validation-for="Author" class="text text-danger"></span>
             </div>
-            <div class="form-group">
+            <div id="parentList" class="form-group">
                 <label>Position</label>
                 <select asp-for="PositionId" class="form-control" asp-items="selectPositionListItems">
                 </select>
