--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Index.cshtml
@@ -52,7 +52,10 @@
                 {
                     <tr>
                         <td>
-                            <img width="100" src="~/img/course/@event1.Image" />
+                            @counter
+                        </td>
+                        <td>
+                            <img width="100" src="~/img/event/@event1.Image" />
                         </td>
 
                         <td>
