--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -448,7 +448,7 @@
                         "showMethod": "fadeIn",
                         "hideMethod": "fadeOut"
                     }
-                    toastr["success"]("My name is Inigo Montoya. You killed my father. Prepare to die!")
+                    toastr["warning"]("Category can not be deleted!")
                 }
             </script>
 
