any ways i will continue tomorrow

--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Category/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Category/Index.cshtml
@@ -69,7 +69,7 @@
                         <td>
                             <a class="btn btn-warning" asp-area="manage" asp-controller="category" asp-action="update" asp-route-id="@category.Id">Update</a>
                             <a class="btn btn-danger" asp-area="manage" asp-controller="category" asp-action="delete" asp-route-id="@category.Id">Delete</a>
-                            <a class="btn btn-primary" asp-area="manage" asp-controller="category" asp-action="ShowDetail" asp-route-id="@category.Id">Detail</a>
+                            <a class="btn btn-primary" asp-area="manage" asp-controller="category" asp-action="detail" asp-route-id="@category.Id">Detail</a>
 
                         </td>
                     </tr>
