--- a/EduHomeBack/EduHomeBack/Views/Course/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Course/Detail.cshtml
@@ -73,7 +73,7 @@
                             @foreach (Category category in Model.Categories.Take(6))
                             {
 
-                            <li><a href="#">@category.Name (@category.Blogs.Count())</a></li>
+                            <li><a href="#">@category.Name (@category.Courses.Count())</a></li>
                             }
                          
                         </ul>
