--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Update.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Blog
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
     IEnumerable<Category> categories = ViewBag.Categories;
     IEnumerable<Tag> tags = ViewBag.Tags;
 
@@ -10,7 +10,7 @@
 
 }
 
-<h1 class="h3 mb-4 text-gray-800">Create Blog</h1>
+<h1 class="h3 mb-4 text-gray-800">Update Blog</h1>
 <div class="row justify-content-center">
     <div class="col-lg-8">
         <form method="post" enctype="multipart/form-data">
@@ -34,7 +34,7 @@
                 <input asp-for="Description" class="form-control" placeholder="Description">
                 <span asp-validation-for="Description" class="text text-danger"></span>
             </div>
-        
+
             <div class="form-group">
                 <label asp-for="File">Image File</label>
                 <input asp-for="File" class="form-control" placeholder="Image File">
@@ -45,12 +45,12 @@
                 <select asp-for="CategoryId" class="form-control" asp-items="selectCategoryListItems">
                 </select>
             </div>
-            <div  class="form-group">
+            <div class="form-group">
                 <label>Tag</label>
                 <select asp-for="TagIds" multiple class="form-control" asp-items="selectTagListItems">
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary">Update</button>
         </form>
     </div>
 </div>
