--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Course/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Course/Update.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Course
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
     IEnumerable<Category> categories = ViewBag.Categories;
     IEnumerable<Teacher> teachers = ViewBag.Teachers;
     IEnumerable<Tag> tags = ViewBag.Tags;
@@ -11,7 +11,7 @@
 
 }
 
-<h1 class="h3 mb-4 text-gray-800">Create Course</h1>
+<h1 class="h3 mb-4 text-gray-800">Update Course</h1>
 <div class="row justify-content-center">
     <div class="col-lg-8">
         <form method="post" enctype="multipart/form-data">
@@ -90,17 +90,17 @@
                 <select asp-for="CategoryId" class="form-control" asp-items="selectCategoryListItems">
                 </select>
             </div>
-            <div  class="form-group">
+            <div class="form-group">
                 <label>Teacher</label>
                 <select asp-for="TeacherId" class="form-control" asp-items="selectTeacherListItems">
                 </select>
             </div>
-            <div  class="form-group">
+            <div class="form-group">
                 <label>Tag</label>
                 <select asp-for="TagIds" multiple class="form-control" asp-items="selectTagListItems">
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary">Update</button>
         </form>
     </div>
 </div>
