--- a/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
@@ -95,7 +95,7 @@
                             @foreach (Category category in Model.Categories.Take(6))
                             {
 
-                                <li><a href="#">@category.Name (@category.Blogs.Count())</a></li>
+                                <li><a href="#">@category.Name (@category.Events.Count())</a></li>
                             }
 
                         </ul>
